# paradox-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README  README.md  docker-entrypoint.sh  main.py  paradox_engine.py  pyproject.toml  settings.py  test.py
alchemy/: models.py  operations.py  service.py
alembic/: env.py
alembic/versions/: 2025_07_18_0516-07c0216f59b3_create_item_table.py
database/: alchemy_database.py
engine/: .dockerignore  .env.example  .gitignore  docker-entrypoint.sh  main.py  paradox_engine.py  prompt_library.py  pyproject.toml  settings.py
engine/alchemy/: models.py  operations.py  service.py
engine/alembic/: env.py
engine/classpect/: models.py  paradox_engine.py  service.py  utils.py
engine/database/: alchemy_database.py
engine/fraymotifs/: models.py  service.py  utils.py
engine/prompts/: .gitignore  LICENSE  aspect_example.md  class_example.md
engine/scripts/: example_objects.json  preload_objects.py
engine/tests/: alchemy_test.py  fraymotif_test.py
fraymotifs/: models.py  service.py
prompts/: .gitignore  paradox_engine.md.example  quiz_answerer.md
prompts/alchemy/: item_description_generator.md  item_generator.md  item_name_generator.md
prompts/aspects/: blood.md  mind.md  rage.md  time.md
prompts/classes/: bard.md  heir.md  mage.md  prince.md  rogue.md  thief.md  witch.md
prompts/fraymotifs/: fraymotif_generator.md
scripts/: example_objects.jsonl  preload_objects.py
terminal/: .env.example  main.py  pyproject.toml  settings.py  utils.py
tests/: alchemy_test.py  fraymotif_test.py
(+18 files in other folders)
