[project]
name = "paradox-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.4",
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.17",
    "langchain-together>=0.3.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "sqlalchemy>=2.0.41",
]
